Fix: Default styling - when buttons flow on to a second line, there should be a small gap between the button rows.

--- a/css/buttons.dataTables.scss
+++ b/css/buttons.dataTables.scss
@@ -57,6 +57,11 @@
 }
 
 div.dt-buttons {
+	display: flex;
+	flex-wrap: wrap;
+	row-gap: 4px;
+	justify-content: center;
+
 	> .dt-button,
 	> div.dt-button-split .dt-button {
 		position: relative;
